# OpenBlade

./: CMakeLists.txt  LICENSE  README.md
Data/: default.cfg
Data/materials/: common.mlib
Data/materials/compiled/: shadow_caster.mat  sky.mat  wall.mat
Data/materials/mg/: shadow_caster.mg  sky.mg  wall.mg
Source/: Application.cpp  BW.cpp  BW.h  FileDump.cpp  FileDump.h  Level.cpp  Level.h
Source-OLD/: BOD.cpp  BladeCAM.h  BladeLevel.h  BladeTextures.h  BladeTunes.h  Common.h  FileDump.cpp  FileDump.h  ImGuiAPI.cpp  ImGuiAPI.h  World.cpp  World.h
Source/DataFormats/: BMV.cpp  BMV.h  BOD.cpp  BOD.h  BW.cpp  BW.h  CAM.cpp  CAM.h  CSV.cpp  CSV.h  SF.cpp  SF.h
Source/Utils/: ConversionUtils.h  FileDump.cpp
